<resources>
    <string name="app_name">GestionInventariosSyM</string>
    <string name="title">Gestion inventarios SyM</string>

    <!-- Login -->
    <string name="userIdentificationLogin">Correo o identificación: </string>
    <string name="textViewPass">Contraseña:</string>
    <string name="buttonLogin">Iniciar sesión</string>

    <!-- Fragment home -->
    <string name="welcome">Bienvenid@</string>
    <string name="saleList">Ventas registradas</string>
    <string name="customerList">Listado clientes</string>

    <!-- Fragments text -->
    <string name="editTextQuantity">Units</string>
    <string name="backHome">Volver al inicio</string>
    <string name="backProductList">Volver a productos</string>
    <string name="goToCart">Ir al carrito</string>
    <string name="search">Buscar</string>

    <!-- Product -->
    <string name="productName">Nombre del prodcto:</string>
    <string name="productQuantity">Cantidad: </string>
    <string name="productDesc">Descripción: </string>
    <string name="productPrice">Precio: </string>
    <string name="createProduct">Registrar nuevo producto</string>
    <string name="updateProduct">Registrar producto</string>
    <string name="titleAlertNewProd">Crear nuevo producto</string>
    <string name="messageAlertNewProd">¿Desea registrar el nuevo producto con los siguientes datos?:</string>
    <string name="createCustomer">Nuevo cliente</string>
    <string name="selectImage">Imagen (opcional)</string>

    <!-- Customer -->
    <string name="customer">Cliente</string>
    <string name="userCustomer">"Cliente :"</string>
    <string name="customerName">Nombre del cliente: </string>
    <string name="nameHint">Ejemplo: Carlos Perez</string>
    <string name="address">Dirección: </string>
    <string name="customerAddressHint">Ejemplo: Calle falsa 123</string>
    <string name="customerPhoneHint">Ejemplo: 3203992323</string>
    <string name="phone">Número telefonico</string>
    <string name="city">Ciudad:</string>
    <string name="customerCityHint">Ejemplo: Bogotá</string>
    <string name="cancel">Cancelar</string>
    <string name="createSale">Nueva venta</string>
    <string name="titleAlertNewSale">Registrar nueva venta</string>
    <string name="messageAlertNewSale">¿Desea reistrar una nueva venta con los siguientes productos?:</string>
    <string name="saleCustomerName">Seleccionar cliente</string>
    <string name="saleDate">Fecha de compra</string>
    <string name="elementAddedToCart">Producto añadido al carrito</string>
    <string name="elementNotAddedToCart">Producto no añadido al carrito</string>

    <!-- Dialogs -->
    <string name="modifyIfIsNecessary">Modifique los datos si es necesario</string>
    <string name="titleAlertNewCustomer">Registrar nuevo cliente</string>
    <string name="messageAlertNewCustomer">¿Desea crear un nuevo cliente con los siguietes datos?:</string>
    <string name="titleAlertUpdateCustomer">Actualizar cliente</string>
    <string name="messageAlertUpdateCustomer">¿Desea actualizar la información del cliente con los siguientes datos?:</string>
    <string name="titleAlertUpdateProd">Actualizar datos producto</string>
    <string name="messageAlertUpdateProd">¿Desea actualizar el producto con los siguientes datos?:</string>

    <!-- Dialogs/new_sale-->
    <string name="selectCustomer">Seleccione el cliente para la venta</string>
    <string name="customerNotSelected">No se ha seleccionado cliente para la venta</string>
    <string name="date">"Fecha: "</string>
    <string name="selectDate">Seleccionar fecha</string>
    <string name="dateNotSelected">No se ha seleccionado fecha de venta</string>
    <string name="titleAlertNewSaleBd">Registrar nueva venta en la base de datos</string>
    <string name="createUser">Crear usuario</string>

    <string name="capturePhoto">Capturar foto</string>
    <string name="getPhotoFromGallery">Foto de galería</string>
    <string name="userList">Listado de usuarios</string>

    <string name="shopFragment">Tienda</string>
    <string name="home">Inicio</string>
    <string name="product">Producto</string>
    <string name="userPasswordHint">****</string>
    <string name="userPassword">Contraseña:</string>
    <string name="messageAlertNewUser">¿Desea registrar un nuevo usuario con los siguientes datos?:</string>
    <string name="titleAlertNewUser">Nuevo usuario</string>
    <string name="userPrivilegeHint">Ej: user</string>
    <string name="cartList">Carrito</string>
    <string name="userName">Usuario: </string>
    <string name="newUser">Nuevo usuario</string>
    <string name="saveLastLocation">Guardar localización</string>

    <!--Location-->
    <string name="location">Localización</string>
    <string name="saveLastLocationObs">Localización periodica</string>
    <string name="saveLocation">¿Desea registrar la ultima localización?: </string>
    <string name="locationFailure">No es posible encontrar la localización</string>
    <string name="pressToReloadMap">Presione el mapa para recargar la ubicación</string>

    <!--Logout-->
    <string name="logOut">Cerrar sesión</string>
    <string name="messageLogOut">¿Desea cerrar la sesión?</string>
    <string name="loginFailure">Fallo en inicio de sesión</string>


    <string name="productDescriptionHint">Ejemplo: Pieza de repuesto para autos </string>
    <string name="productQuantityHint">Ej: 20</string>

    <!--Alerts-->
    <string name="titleAlertDeleteProd">Eliminar producto</string>
    <string name="messageAlertDeleteProd">¿Desea eliminar el siguiente producto?</string>
    <string name="messageProductListRestAdded">Lista de productos REST añadida, los items con borde azul e icono con una nube no
        estan en la BD, si los desea agregar en la BD o editar para su registro puede hacerlo</string>
    <string name="titleProductListRestAdded">Listado de productos REST</string>
    <string name="messageUserRegistered">Usuario registrado, inicie sesión</string>
    <string name="titleUserRegistered">Registro</string>
    <string name="messageUserNotRegistered">Fallo registrando el usuario</string>

    <!--Failures and success-->
    <string name="userDeleteFailure">Fallo al eliminar el cliente</string>
    <string name="userInsertSuccess">Usuario registrado correctamente</string>
    <string name="userDeleteSuccess">Usuario eliminado exitosamente</string>
    <string name="elementRemovedFromCart">Producto eliminado del carrito</string>
    <string name="elementNotRemovedFromCart">Producto no eliminado del carrito</string>
    <string name="transactionSuccess">Se realizo la operación con exito</string>
    <string name="transactionFailure">No se pudo realizar la operación</string>
    <string name="productAlreadyInCart">El producto ya esta en el carrito</string>
    <string name="productListUpdateFailure">Falla al actualizar la cantidad del listado de productos</string>
    <string name="productListUpdateSuccess">Cantidades del listado de productos actualizada</string>
    <string name="productListRestFailure">Fallo al cargar listado de productos REST </string>
    <string name="imageLoadFailure">Fallo al cargar la URL de la imagen</string>
    <string name="productNotRegisted">Producto no registrado, redirigiendo</string>
    <string name="emptyData">Campos vacios</string>

    <!--Wrong quantities-->
    <string name="outOfStock">No hay unidades disponibles, edite el producto</string>
    <string name="wrongQuantityNumber">Digite un numero correcto de acuerdo a la cantidad disponible</string>
    <string name="wrongNumber">Digite un numero correcto</string>

    <!--Buttons-->
    <string name="buttonRegister">Registro</string>
    <string name="backUserList">Volver a listado de usuarios</string>
    <string name="redirectingToNewUser">Redirigiendo a crear un nuevo usuario</string>

    <!--Messages to adapters or user-->
    <string name="name">"Nombre: "</string>
    <string name="userPrivilege">"Privilegio: "</string>
    <string name="registerUserBD">Opción 2: Registro en BD</string>
    <string name="registerUserGoogle">Opción 1: Registro con Google</string>
    <string name="userIdentification">Correo o identificación, para el inicio de sesión</string>
    <string name="userIdentificationHint">Ej: correo@mail.com o 1292812321</string>
    <string name="identification">"Identificación: "</string>
    <string name="productList">"Listado de productos: "</string>

    <!--New user spinner-->
    <string-array name="users_list">
        <item>Admin</item>
        <item>User</item>
    </string-array>

</resources>