<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="320dp"
    android:layout_height="600dp"
    >
    <TextView
        android:id="@+id/textViewUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textViewUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserTitle"
        app:layout_constraintBottom_toTopOf="@id/editTextUserName"
        />

    <EditText
        android:id="@+id/editTextUserName"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@+id/textViewUserName"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserName"
        app:layout_constraintBottom_toTopOf="@id/textViewPassword"
        />


    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        app:layout_constraintBottom_toTopOf="@id/editTextPassword"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/userPasswordHint"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@+id/textViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
        app:layout_constraintBottom_toTopOf="@id/textViewPrivilege"
        />
    <TextView
        android:id="@+id/textViewPrivilege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userPrivilege"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintBottom_toTopOf="@id/editTextPrivilege"
        />

    <EditText
        android:id="@+id/editTextPrivilege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/userPrivilegeHint"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="@+id/textViewPrivilege"
        app:layout_constraintTop_toBottomOf="@+id/textViewPrivilege"
        app:layout_constraintBottom_toTopOf="@id/buttonNewUserToNewUser"
        />

    <Button
        android:id="@+id/buttonNewUserToNewUser"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_edit"
        android:text="@string/createUser"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrivilege"
        app:layout_constraintBottom_toTopOf="@+id/buttonNewUserCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/buttonNewUserCancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>