<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <Button
        android:id="@+id/buttonNewUserToUserList"
        android:background="@color/buttonSecondaryLight"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_list"
        android:text="@string/backUserList"
        app:layout_constraintEnd_toStartOf="@+id/buttonNewUserToHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNewUserToHome"
        android:background="@color/buttonSecondaryLight"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_home"
        android:text="@string/backHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNewUserToUserList"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewNewUser"
        />

    <ScrollView
        android:id="@+id/scrollViewNewUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewUserToHome">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutNewUser"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/textViewUserTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/textViewRegisterUserGoogle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewRegisterUserGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerUserGoogle"
                app:layout_constraintBottom_toTopOf="@id/buttonRegisterWithGoogle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserTitle" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/buttonRegisterWithGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewRegisterUserBD"
                app:layout_constraintStart_toStartOf="@+id/textViewRegisterUserGoogle"
                app:layout_constraintTop_toBottomOf="@+id/textViewRegisterUserGoogle" />

            <TextView
                android:id="@+id/textViewRegisterUserBD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerUserBD"
                app:layout_constraintBottom_toTopOf="@id/textViewUserIdentification"
                app:layout_constraintStart_toStartOf="@+id/buttonRegisterWithGoogle"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegisterWithGoogle" />

            <TextView
                android:id="@+id/textViewUserIdentification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userIdentification"
                app:layout_constraintBottom_toTopOf="@id/editTextUserIdentification"
                app:layout_constraintStart_toStartOf="@+id/textViewRegisterUserBD"
                app:layout_constraintTop_toBottomOf="@+id/textViewRegisterUserBD" />

            <EditText
                android:id="@+id/editTextUserIdentification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                android:hint="@string/userIdentificationHint"
                app:layout_constraintBottom_toTopOf="@id/textViewUserName"
                app:layout_constraintStart_toStartOf="@+id/textViewUserIdentification"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserIdentification" />

            <TextView
                android:id="@+id/textViewUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                app:layout_constraintBottom_toTopOf="@id/editTextUserName"
                app:layout_constraintStart_toStartOf="@+id/editTextUserIdentification"
                app:layout_constraintTop_toBottomOf="@+id/editTextUserIdentification" />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:hint="@string/nameHint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@id/textViewPassword"
                app:layout_constraintStart_toStartOf="@+id/textViewUserName"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />


            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPassword"
                app:layout_constraintBottom_toTopOf="@id/editTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextUserName"
                app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints="@string/userPasswordHint"
                android:hint="@string/userPasswordHint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/textViewPrivilege"
                app:layout_constraintStart_toStartOf="@+id/textViewPassword"
                app:layout_constraintTop_toBottomOf="@+id/textViewPassword" />

            <TextView
                android:id="@+id/textViewPrivilege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPrivilege"
                app:layout_constraintBottom_toTopOf="@id/editTextPrivilege"
                app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <Spinner
                android:id="@+id/editTextPrivilege"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:entries="@array/users_list"
                app:layout_constraintBottom_toTopOf="@id/textViewProductPhoto"
                app:layout_constraintStart_toStartOf="@+id/textViewPrivilege"
                app:layout_constraintTop_toBottomOf="@+id/textViewPrivilege" />

            <TextView
                android:id="@+id/textViewProductPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectImage"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonNewUserToGallery"
                app:layout_constraintStart_toStartOf="@+id/editTextPrivilege"
                app:layout_constraintTop_toBottomOf="@+id/editTextPrivilege" />

            <Button
                android:id="@+id/buttonNewUserToGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/buttonSecondaryLight"
                android:drawableStart="@drawable/ic_gallery"
                android:padding="10dp"
                android:layout_marginEnd="4dp"
                android:text="@string/getPhotoFromGallery"
                app:layout_constraintBottom_toTopOf="@id/imageViewNewUser"
                app:layout_constraintEnd_toStartOf="@+id/buttonNewUserToCamera"
                app:layout_constraintStart_toStartOf="@+id/textViewProductPhoto"
                app:layout_constraintTop_toBottomOf="@+id/textViewProductPhoto" />


            <Button
                android:id="@+id/buttonNewUserToCamera"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@color/buttonSecondaryLight"
                android:drawableStart="@drawable/ic_camera"
                android:padding="10dp"
                android:layout_marginStart="4dp"
                android:text="@string/capturePhoto"
                app:layout_constraintBottom_toBottomOf="@+id/buttonNewUserToGallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonNewUserToGallery"
                app:layout_constraintTop_toTopOf="@+id/buttonNewUserToGallery" />

            <ImageView
                android:id="@+id/imageViewNewUser"
                android:layout_width="280dp"
                android:layout_height="300dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/welcome"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonNewUserToCamera" />

            <Button
                android:id="@+id/buttonNewUserToNewUser"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:drawableStart="@drawable/ic_edit"
                android:text="@string/createUser"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:background="@color/buttonSecondaryLight"
                app:layout_constraintBottom_toTopOf="@+id/buttonNewUserCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewNewUser" />

            <Button
                android:id="@+id/buttonNewUserCancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:text="@string/cancel"
                android:background="@color/buttonSecondaryLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonNewUserToNewUser" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
