<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    >
    <TextView
        android:id="@+id/textViewTitleSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createSale"
        app:layout_goneMarginBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCustomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textViewCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectCustomer"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleSale"
        />

    <Button
        android:id="@+id/buttonSelectCustomerName"
        android:text="@string/saleCustomerName"
        android:background="@color/buttonSecondaryLight"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonNewCustomer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustomer"
        app:layout_constraintBottom_toTopOf="@id/textViewSaleCustomerNameSelected"


        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/buttonNewCustomer"
        android:text="@string/createCustomer"
        android:background="@color/buttonSecondaryLight"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonSelectCustomerName"
        app:layout_constraintTop_toBottomOf="@+id/textViewCustomer"
        app:layout_constraintBottom_toTopOf="@id/textViewSaleCustomerNameSelected"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textViewSaleCustomerNameSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/customerNotSelected"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonSelectCustomerName"
        app:layout_constraintBottom_toTopOf="@id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewCustomer" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDate"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaleCustomerNameSelected"
        app:layout_constraintBottom_toTopOf="@id/buttonDate"
        />

    <Button
        android:id="@+id/buttonDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDate"
        android:background="@color/buttonSecondaryLight"
        android:padding="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDateSelected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        />

    <TextView
        android:id="@+id/textViewDateSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/dateNotSelected"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNewSale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDate" />

    <Button
        android:id="@+id/buttonNewSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_add_quantity"
        android:drawablePadding="15dp"
        android:padding="10dp"
        android:text="@string/createSale"
        android:background="@color/buttonSecondaryLight"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateSelected"
        app:layout_constraintBottom_toTopOf="@+id/buttonNewSaleCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/buttonNewSaleCancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:background="@color/buttonSecondaryLight"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewSale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>