<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/buttonProductListToCart"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_add_cart"
        android:onClick="goToCart"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:text="@string/goToCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/buttonProductListToHome"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawableLeft="@drawable/ic_home"
        android:onClick="goToHome"
        android:paddingBottom="5dp"
        android:text="@string/backHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/editTextSearchProductList"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonProductListToSearch"
        />
    <Button
        android:id="@+id/buttonProductListToSearch"
        android:drawableLeft="@drawable/ic_search"
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextSearchProductList"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProductList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearchProductList" />


    <Button
        android:id="@+id/buttonProductListToNewProduct"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:drawableStart="@drawable/ic_add_quantity"
        android:paddingBottom="5dp"
        android:text="@string/createProduct"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewProductList"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>